rework tabs: completely rework tabs
BROKEN:
All attributes have changes. Please read the updated documentation.

--- a/modules/tabs/views/tab.html
+++ b/modules/tabs/views/tab.html
@@ -1,1 +1,1 @@
-<div class="tabs-pane" ng-if="lxTabIndex === lxTabData.lxTabsActiveTab" ng-transclude="child"></div>
+<div class="tabs-pane" ng-show="lxTab.tabIsActive()" ng-transclude></div>
