--- a/modules/tabs/scss/_tabs.scss
+++ b/modules/tabs/scss/_tabs.scss
@@ -1,151 +1,114 @@
 ///*------------------------------------*\
-//    #OBJECTS-TABS
+//    #TABS
 //\*------------------------------------*/
 
-// Tabs base styles
+// Tabs
 .tabs {
     position: relative;
     overflow: hidden;
-
-    &:after {
-        content: '';
-        @include position(absolute, (($base-spacing-unit * 6) - 1) 0 null 0);
-        height: 1px;
-    }
-
-    .tabs__pagination-left, .tabs__pagination-right {
-        position: absolute;
-        top: 0;
-        height: 47px;
-    }
-
-    .tabs__pagination-left {
-        left: 0;
-    }
-
-    .tabs__pagination-right {
-        right: 0;
-    }
-
-    .tabs__pagination-padding {
-        padding: 0px 41px;
-    }
 }
 
-// Tabs themes
-.tabs--theme-light {
-    &:after {
-        background-color: $white-2;
-    }
-
-    .tabs__pagination-left, .tabs__pagination-right {
-        color: $white-1;
-    }
-
-    .tabs-link {
-        color: $white-2;
-    }
-
-    .tabs-link:hover,
-    .tabs-link--is-active {
-        color: $white-1 !important;
-    }
-}
-
-.tabs--theme-dark {
-    &:after {
-        background-color: $black-4;
-    }
-
-    .tabs__pagination-left, .tabs__pagination-right {
-        color: $black-1;
-    }
-
-    .tabs-link {
-        color: $black-2;
-    }
-}
-
-// Tabs layout
-.tabs--layout-full {
-    .tabs__links {
-        display: table;
-        table-layout: fixed;
-        width: 100%;
-        text-align: center;
-
-        li {
-            display: table-cell;
-            width: 100px;
+@each $key, $color in $colors {
+    .tabs--theme-light.tabs--color-#{$key} {
+        .tabs__link:hover,
+        .tabs__link--is-active {
+            color: $color;
         }
-    }
-}
 
-.tabs--layout-inline {
-    .tabs__links {
-        li {
-            display: inline-block;
-            vertical-align: top;
+        .tabs__indicator {
+            background-color: $color;
         }
     }
 
-    .tabs-link {
-        @include media-query(palm) {
-            padding-left: $base-spacing-unit * 1.5;
-            padding-right: $base-spacing-unit * 1.5;
-        }
-
-        @include media-query(lap-and-up) {
-            padding-left: $base-spacing-unit * 3;
-            padding-right: $base-spacing-unit * 3;
+    .tabs--theme-dark.tabs--color-#{$key} {
+        .tabs__links {
+            background-color: $color;
         }
     }
-}
 
-// No divider
-.tabs--no-divider:after {
-    display: none;
+    .tabs--theme-dark.tabs--indicator-#{$key} {
+        .tabs__indicator {
+            background-color: $color;
+        }
+    }
 }
     
-    // Tabs links
+    // Tabs: links
     .tabs__links {
         position: relative;
-        @extend %bare-list;
+        @include display(flex);
+        @include flex-direction(row);
+
+        .tabs--layout-center & {
+            @include justify-content(center);
+        }
+
+        .tabs--theme-light &:after {
+            content: '';
+            @include position(absolute, null 0 0 0);
+            height: 1px;
+            background-color: $black-4;
+        }
     }
 
-    // Tabs indicator
+    // Tabs: link
+    .tabs__link {
+        display: block;
+        height: 48px;
+        cursor: pointer;
+        font-weight: 500;
+        line-height: 48px;
+        text-align: center;
+        text-transform: uppercase;
+        @include transition-property(color);
+        @include transition-duration(0.2s);
+
+        @include media-query(portable) {
+            @include font-size(14px);
+        }
+
+        @include media-query(desk) {
+            @include font-size(13px);
+        }
+
+        #{$base-icon-prefix} {
+            @include font-size(24px);
+            line-height: 48px;
+        }
+
+        .tabs--layout-full & {
+            @include flex(1);
+        }
+
+        .tabs--layout-inline &,
+        .tabs--layout-center & {
+            @include media-query(palm) {
+                padding-left: $base-spacing-unit * 1.5;
+                padding-right: $base-spacing-unit * 1.5;
+            }
+
+            @include media-query(lap-and-up) {
+                padding-left: $base-spacing-unit * 3;
+                padding-right: $base-spacing-unit * 3;
+            }
+        }
+
+        .tabs--theme-light & {
+            color: $black-2;
+        }
+
+        .tabs--theme-dark & {
+            color: $white-2;
+
+            &:hover,
+            &.tabs__link--is-active {
+                color: $white-1;
+            }
+        }
+    }
+
+    // Tabs: indicator
     .tabs__indicator {
-        @include position(absolute, (($base-spacing-unit * 6) - 2) 0 null 0);
-        z-index: 1;
+        @include position(absolute, 46px 0 null 0);
         height: 2px;
     }
-
-
-
-
-
-// Tabs link
-.tabs-link {
-    display: block;
-    height: $base-spacing-unit * 6;
-    cursor: pointer;
-    font-weight: 500;
-    line-height: 48px;
-    text-align: center;
-    text-transform: uppercase;
-    @include transition-property(color);
-    @include transition-duration(0.2s);
-
-    @include media-query(portable) {
-        @include font-size(14px);
-    }
-
-    @include media-query(desk) {
-        @include font-size(13px);
-    }
-
-    .mdi {
-        @include font-size(24px);
-        line-height: $base-spacing-unit * 6;
-    }
-}
