feat tabs: add separate mode

--- a/modules/tabs/views/tab.html
+++ b/modules/tabs/views/tab.html
@@ -1,1 +1,1 @@
-<div class="tabs-pane" ng-show="lxTab.tabIsActive()" ng-transclude></div>
+<div class="tabs__pane" ng-show="lxTab.tabIsActive()" ng-transclude></div>
