--- a/modules/tabs/demo/includes/example.html
+++ b/modules/tabs/demo/includes/example.html
@@ -12,4 +12,20 @@
             <p class="p+">Lorem Ipsum Content 3</p>
         </lx-tab>
     </lx-tabs>
+
+    <lx-tabs lx-panes="lorem" lx-labels="['Lorem Ipsum 1', 'Lorem Ipsum 2', 'Lorem Ipsum 3']"></lx-tabs>
+
+    <lx-tabs-panes id="lorem">
+        <lx-tab-pane>
+            <p class="p+">Lorem Ipsum Content 1</p>
+        </lx-tab-pane>
+
+        <lx-tab-pane>
+            <p class="p+">Lorem Ipsum Content 2</p>
+        </lx-tab-pane>
+
+        <lx-tab-pane>
+            <p class="p+">Lorem Ipsum Content 3</p>
+        </lx-tab-pane>
+    </lx-tabs-panes>
 </div>
