--- a/modules/tabs/demo/includes/example.html
+++ b/modules/tabs/demo/includes/example.html
@@ -4,7 +4,7 @@
             <p class="p+">Lorem Ipsum Content 1</p>
         </lx-tab>
 
-        <lx-tab lx-label="Lorem Ipsum 2">
+        <lx-tab lx-label="Lorem Ipsum 2" ng-disabled="tabIsDisabled">
             <p class="p+">Lorem Ipsum Content 2</p>
         </lx-tab>
 
@@ -12,6 +12,10 @@
             <p class="p+">Lorem Ipsum Content 3</p>
         </lx-tab>
     </lx-tabs>
+    
+    <div class="p+">
+        <lx-button ng-click="setTabIsDisabled()">Toggle tab disabled state</lx-button>
+    </div>
 </div>
 
 <div class="card mt++">
@@ -81,7 +85,7 @@
 </div>
 
 <div class="card mt++">
-    <lx-tabs lx-panes="lorem" lx-labels="['Lorem Ipsum 1', 'Lorem Ipsum 2', 'Lorem Ipsum 3']"></lx-tabs>
+    <lx-tabs lx-panes-id="lorem" lx-links="[{label: 'Lorem Ipsum 1'}, {label: 'Lorem Ipsum 2'}, {label: 'Lorem Ipsum 3', disabled: true}]"></lx-tabs>
 
     <lx-tabs-panes id="lorem">
         <lx-tab-pane>
