rework dropdown: completely rework dropdown
BREAKING:
All attributes must now be prefixed by lx.

--- a/modules/dropdown/demo/includes/example.html
+++ b/modules/dropdown/demo/includes/example.html
@@ -25,7 +25,7 @@
     </lx-dropdown-menu>
 </lx-dropdown>
 
-<lx-dropdown position="right" from-top="true">
+<lx-dropdown lx-position="right" lx-over-toggle="true">
     <button class="btn btn--m btn--black btn--icon" lx-ripple lx-dropdown-toggle>
         <i class="mdi mdi-dots-vertical"></i>
     </button>
@@ -74,7 +74,7 @@
     </lx-dropdown-menu>
 </lx-dropdown>
 
-<lx-dropdown position="right" from-top="true">
+<lx-dropdown lx-position="right" lx-over-toggle="true">
     <button class="btn btn--m btn--black btn--icon" lx-ripple lx-dropdown-toggle>
         <i class="mdi mdi-dots-vertical"></i>
     </button>
@@ -115,7 +115,7 @@
     </lx-dropdown-menu>
 </lx-dropdown>
 
-<lx-dropdown over-toggle="true">
+<lx-dropdown lx-over-toggle="true">
     <button class="btn btn--m btn--black btn--flat" lx-ripple lx-dropdown-toggle>
         Dropdown toggle
     </button>
