--- a/modules/dropdown/views/dropdown-menu.html
+++ b/modules/dropdown/views/dropdown-menu.html
@@ -1,3 +1,4 @@
-<div class="dropdown-menu dropdown-menu--{{ lxDropdownPosition }}" ng-class="{ 'dropdown__menu--is-dropped': lxDropdownIsDropped }">
-    <div class="dropdown-menu__content" ng-transclude="child" ng-if="lxDropdownIsDropped"></div>
+<div class="dropdown-menu dropdown-menu--{{ lxDropdownMenu.parentCtrl.position }}"
+     ng-class="{ 'dropdown__menu--is-open': lxDropdownMenu.parentCtrl.isOpen }">
+    <div class="dropdown-menu__content" ng-transclude ng-if="lxDropdownMenu.parentCtrl.isOpen"></div>
 </div>
