--- a/modules/select/views/select.html
+++ b/modules/select/views/select.html
@@ -4,7 +4,7 @@
                  'lx-select--is-valid': lxSelectValid(),
                  'lx-select--has-error': lxSelectError(),
                  'lx-select--is-disabled': lxSelectDisabled() }">
-    <lx-dropdown width="32" over-toggle="true">
+    <lx-dropdown lx-width="100%" lx-over-toggle="true" lx-embed="true">
         <div ng-transclude="child"></div>
     </lx-dropdown>
 </div>
