chore demo: update dialog example

--- a/modules/dialog/demo/includes/example.html
+++ b/modules/dialog/demo/includes/example.html
@@ -8,9 +8,9 @@
             </span>
 
             <div class="toolbar__right">
-                <button class="btn btn--l btn--white btn--icon" lx-ripple ng-click="addPerson()">
+                <lx-button lx-size="l" lx-color="white" lx-type="icon" ng-click="addPerson()">
                     <i class="mdi mdi-plus"></i>
-                </button>
+                </lx-button>
             </div>
         </div>
 
