Rework date picker: completely rework date picker
BREAKING:
All attributes must now be prefixed by lx.
Some attributes have changed, please refer to the updated documentation.

--- a/modules/date-picker/demo/includes/example.html
+++ b/modules/date-picker/demo/includes/example.html
@@ -1,6 +1,6 @@
-<lx-date-picker model="datepicker.date" label="Pick a date" locale="fr" allow-clear="true"></lx-date-picker>
+<lx-date-picker ng-model="datepicker.date" lx-locale="fr" lx-input-label="Pick a date" lx-allow-clear="true"></lx-date-picker>
 
-<div class="mt+">
+<!-- <div class="mt+">
     <lx-date-picker model="datepicker.date" label="Pick a date" locale="fr" fixed-label="true" icon="calendar"></lx-date-picker>
     <lx-date-picker label="Pick a date" locale="fr" fixed-label="true" icon="cake-variant"></lx-date-picker>
-</div>
+</div> -->
