--- a/modules/date-picker/scss/_date-picker.scss
+++ b/modules/date-picker/scss/_date-picker.scss
@@ -2,32 +2,9 @@
 //    #OBJECTS-DATE-PICKER
 //\*------------------------------------*/
 
-// Lx date base styles
+// Lx date
 .lx-date {
     position: relative;
-}
-
-.lx-date--fixed-label {
-
-    // Text field
-    .text-field {
-        padding-top: $base-spacing-unit;
-    }
-
-    .text-field--is-active {
-        .text-field__label {
-            display: none;
-        }
-    }
-
-        // Text field label
-        .text-field__label {
-            @include transform(none);
-        }
-}
-
-.lx-date--with-icon {
-    margin-left: $base-spacing-unit * 8;
 }
 
 
@@ -39,9 +16,9 @@
     @include position(fixed, 0 0 0 0);
     opacity: 0;
     z-index: 999;
-    background-color: rgba(0, 0, 0, .6);
+    background-color: rgba(0, 0, 0, 0.6);
     @include transition-property(opacity);
-    @include transition-duration(.6s);
+    @include transition-duration(0.6s);
     @include transition-timing-function($ease-out-quint);
 }
 
@@ -76,9 +53,9 @@
     @include position(absolute, null 0 $base-spacing-unit null);
     opacity: 0;
     cursor: pointer;
-    line-height: $base-spacing-unit * 4;
+    line-height: 32px;
     @include transition-property(opacity, color);
-    @include transition-duration(.2s);
+    @include transition-duration(0.2s);
 
     &:hover {
         color: $red-500;
@@ -89,21 +66,42 @@
 
 
 
-// Date picker base styles
+// Date picker
 .lx-date-picker {
     display: none;
     @include position(fixed, $base-spacing-unit * 4 null null 50%);
-    opacity: 0;
     z-index: 1000;
-    margin-left: -140px;
+    width: 330px;
+    margin-left: -165px;
     background-color: $white;
-    padding-top: 172px;
-    width: 280px;
+    opacity: 0;
     @include z-depth(3);
     @include transform(translateY(-50px));
     @include transition-property(opacity, transform);
-    @include transition-duration(.6s);
+    @include transition-duration(0.6s);
     @include transition-timing-function($ease-out-quint);
+}
+
+@each $key, $color in $colors {
+    .lx-date-picker--#{$key} {
+        .lx-date-picker__header {
+            background-color: $color;
+        }
+
+        .lx-date-picker__day--is-today a {
+            color: $color;
+        }
+
+        .lx-date-picker__day a:hover,
+        .lx-date-picker__day--is-selected a {
+            background-color: $color;
+        }
+
+        .lx-date-picker__year:hover,
+        .lx-date-picker__year--is-active {
+            color: $color;
+        }
+    }
 }
 
 .lx-date-picker--is-shown {
@@ -112,174 +110,152 @@
 }
 
 .lx-date-picker__header {
-    @include position(absolute, 0 0 null 0);
+    padding: $base-spacing-unit * 2 $base-spacing-unit * 3;
 }
-
-    // Date picker current day of week
-    .lx-date-picker__current-day-of-week {
-        background-color: $teal-700;
-
-        span {
-            display: block;
-            @include font-size(14px);
-            text-align: center;
-            text-transform: capitalize;
-            line-height: 32px;
-            color: $white-1;
-        }
-    }
-
-    // Date picker current date
+    
+    // Date picker: current year / current date
+    .lx-date-picker__current-year,
     .lx-date-picker__current-date {
-        background-color: $teal-500;
-        padding: $base-spacing-unit 0;
-
-        span,
-        strong,
-        a {
-            display: block;
-            text-align: center;
-            font-weight: 400;
-        }
-
-        span,
-        a {
-            @include font-size(24px);
-            line-height: 32px;
-        }
-
-        span {
-            text-transform: uppercase;
-        }
-
-        strong {
-            @include font-size(60px);
-            line-height: 1;
-        }
-
-        a {
-            cursor: pointer;
-            font-style: normal;
-        }
+        display: block;
+        cursor: pointer;
     }
 
-    // Date picker navigation
+    // Date picker: current year
+    .lx-date-picker__current-year {
+        @include font-size(14px);
+        color: $white-2;
+        line-height: 22px;
+    }
+
+    .lx-date-picker__current-year:hover,
+    .lx-date-picker__current-year--is-active {
+        color: $white-1;
+    }
+
+    // Date picker: current date
+    .lx-date-picker__current-date {
+        @include font-size(38px);
+        font-weight: 500;
+        color: $white-2;
+        line-height: 42px;
+    }
+
+    .lx-date-picker__current-date:hover,
+    .lx-date-picker__current-date--is-active {
+        color: $white-1;
+    }
+
+    // Date picker: calendar
+    .lx-date-picker__calendar {
+        height: 350px;
+    }
+
+    // Date picker: navigation
     .lx-date-picker__nav {
-        position: relative;
+        @include display(flex);
+        @include flex-direction(row);
+        @include align-items(center);
+        height: 52px;
 
         span {
-            display: block;
+            @include flex(1);
             @include font-size(14px);
             text-align: center;
             text-transform: capitalize;
-            line-height: 40px;
             font-weight: 500;
         }
 
         button {
-            position: absolute !important;
-            top: $base-spacing-unit;
-
             &:first-child {
-                left: $base-spacing-unit * 2;
+                margin-left: $base-spacing-unit;
             }
 
             &:last-child {
-                right: $base-spacing-unit * 2;
+                margin-right: $base-spacing-unit;
             }
         }
     }
 
-    // Date picker days of week
+    // Date picker: days of week
     .lx-date-picker__days-of-week {
+        @include display(flex);
+        @include flex-direction(row);
+        @include align-items(center);
         padding: 0 $base-spacing-unit * 2;
 
         span {
-            display: inline-block;
-            width: percentage(1/7);
-            vertical-align: top;
+            @include flex(1);
             @include font-size(12px);
+            font-weight: 400;
+            color: $black-2;
+            line-height: 32px;
             text-align: center;
             text-transform: uppercase;
-            line-height: 24px;
-            color: $black-2;
-            font-weight: 400;
         }
     }
 
-    // Date picker days
+    // Date picker: days
     .lx-date-picker__days {
+        @include display(flex);
+        @include flex-direction(row);
+        @include flex-wrap(wrap);
+        @include align-items(center);
         padding: 0 $base-spacing-unit * 2;
     }
 
-    // Date picker day
+    // Date picker: day
     .lx-date-picker__day {
-        display: inline-block;
-        padding: $base-spacing-unit / 2 0;
-        width: percentage(1/7);
-        vertical-align: top;
+        @include flex(0 0 #{(100 / 7) + '%'});
+        max-width: #{(100 / 7) + '%'};
+        padding: 1px 0;
 
         a {
             display: block;
-            @include size(32px);
+            @include size(40px);
             margin: 0 auto;
             border-radius: 50%;
             @include font-size(12px);
             text-align: center;
-            line-height: 32px;
+            line-height: 40px;
             font-weight: 400;
         }
     }
 
     .lx-date-picker__day--is-today a {
-        color: $teal-700;
         font-weight: 500;
     }
 
     .lx-date-picker__day a:hover,
     .lx-date-picker__day--is-selected a {
-        background-color: $teal-500;
         cursor: pointer;
-        color: $white-1;
+        color: $white-1 !important;
     }
 
-    // Year selector
+    // Date picker: year selector
     .lx-date-picker__year-selector {
         position: relative;
-        height: 5 * 65px;
+        height: 350px;
         overflow: auto;
         -webkit-overflow-scrolling: touch;
     }
 
     .lx-date-picker__year {
         display: block;
+        height: 45px;
         cursor: pointer;
-
-        span {
-            display: block;
-            @include size(65px);
-            margin: 0 auto;
-            border-radius: 50%;
-            @include font-size(16px);
-            text-align: center;
-            line-height: 65px;
-        }
-    }
-
-    .lx-date-picker__year:hover {
-        span {
-            color: $teal-700;
-        }
+        @include font-size(16px);
+        line-height: 45px;
+        text-align: center;
     }
 
     .lx-date-picker__year--is-active {
-        span {
-            background-color: $teal-500;
-            color: $white-1 !important;
-        }
+        height: 55px;
+        @include font-size(26px);
+        font-weight: 500;
+        line-height: 55px;
     }
 
-    // Date picker actions
+    // Date picker: actions
     .lx-date-picker__actions {
         border-top: 1px solid $black-4;
         padding: $base-spacing-unit;
