--- a/modules/date-picker/views/date-picker.html
+++ b/modules/date-picker/views/date-picker.html
@@ -1,88 +1,86 @@
-<div class="lx-date" ng-class="{ 'lx-date--fixed-label': fixedLabel(),
-                                 'lx-date--with-icon': icon && fixedLabel() }">
-
-    <div class="text-field__icon" ng-if="icon && fixedLabel() ">
-        <i class="mdi mdi-{{ icon }}"></i>
-    </div>
-
+<div class="lx-date">
     <!-- Date picker input -->
     <div class="lx-date__input-wrapper">
-        <lx-text-field class="lx-date-input" label="{{ label }}" ng-click="openPicker()">
-            <input type="text" ng-model="selected.model" ng-disabled="true">
+        <lx-text-field class="lx-date-input" label="{{ lxDatePicker.inputLabel }}" ng-click="lxDatePicker.openPicker()">
+            <input type="text" ng-model="lxDatePicker.ngModelMomentFormatted" ng-disabled="true">
         </lx-text-field>
 
-        <a class="lx-date__clear" ng-click="clearDate()" ng-if="allowClear">
-            <i class="mdi mdi-close-circle" ng-click="unselect($selected, $event)" ng-if="allowClear"></i>
+        <a class="lx-date__clear" ng-click="lxDatePicker.clearDate()" ng-if="lxDatePicker.allowClear">
+            <i class="mdi mdi-close-circle"></i>
         </a>
     </div>
 
     <!-- Date picker -->
-    <div class="lx-date-picker">
-        <div ng-if="ctrlData.isOpen">
+    <div class="lx-date-picker lx-date-picker--{{ lxDatePicker.color }}">
+        <div ng-if="lxDatePicker.isOpen">
+            <!-- Date picker: header -->
             <div class="lx-date-picker__header">
-                <!-- Current day of week -->
-                <div class="lx-date-picker__current-day-of-week">
-                    <span>{{ moment(selected.date).format('dddd') }}</span>
-                </div>
+                <a class="lx-date-picker__current-year"
+                   ng-class="{ 'lx-date-picker__current-year--is-active': lxDatePicker.yearSelection }"
+                   ng-click="lxDatePicker.displayYearSelection()">
+                    {{ lxDatePicker.moment(lxDatePicker.ngModel).format('YYYY') }}
+                </a>
 
-                <!-- Current date -->
-                <div class="lx-date-picker__current-date">
-                    <span ng-class="{ 'tc-white-1': !yearSelection, 'tc-white-3': yearSelection }">{{ moment(selected.date).format('MMM') }}</span>
-                    <strong ng-class="{ 'tc-white-1': !yearSelection, 'tc-white-3': yearSelection }">{{ moment(selected.date).format('DD') }}</strong>
-                    <a ng-class="{ 'tc-white-3': !yearSelection, 'tc-white-1': yearSelection }" ng-click="displayYearSelection()">{{ moment(selected.date).format('YYYY') }}</a>
-                </div>
+                <a class="lx-date-picker__current-date"
+                   ng-class="{ 'lx-date-picker__current-date--is-active': !lxDatePicker.yearSelection }"
+                   ng-click="lxDatePicker.hideYearSelection()">
+                    {{ lxDatePicker.getDateFormatted() }}
+                </a>
             </div>
-
+            
+            <!-- Date picker: content -->
             <div class="lx-date-picker__content">
                 <!-- Calendar -->
-                <div class="lx-date-picker__calendar" ng-if="!yearSelection">
+                <div class="lx-date-picker__calendar" ng-if="!lxDatePicker.yearSelection">
                     <div class="lx-date-picker__nav">
-                        <button class="btn btn--xs btn--teal btn--icon" lx-ripple ng-click="previousMonth()">
+                        <lx-button lx-size="l" lx-color="black" lx-type="icon" ng-click="lxDatePicker.previousMonth()">
                             <i class="mdi mdi-chevron-left"></i>
-                        </button>
+                        </lx-button>
 
-                        <span>{{ activeDate.format('MMMM YYYY') }}</span>
-
-                        <button class="btn btn--xs btn--teal btn--icon" lx-ripple ng-click="nextMonth()">
+                        <span>{{ lxDatePicker.moment(lxDatePicker.ngModel).format('MMMM YYYY') }}</span>
+                        
+                        <lx-button lx-size="l" lx-color="black" lx-type="icon" ng-click="lxDatePicker.nextMonth()">
                             <i class="mdi mdi-chevron-right"></i>
-                        </button>
+                        </lx-button>
                     </div>
 
                     <div class="lx-date-picker__days-of-week">
-                        <span ng-repeat="day in daysOfWeek">{{ day }}</span>
+                        <span ng-repeat="day in lxDatePicker.daysOfWeek">{{ day }}</span>
                     </div>
 
                     <div class="lx-date-picker__days">
                         <span class="lx-date-picker__day lx-date-picker__day--is-empty"
-                              ng-repeat="x in emptyFirstDays">&nbsp;</span><!--
+                              ng-repeat="x in lxDatePicker.emptyFirstDays">&nbsp;</span>
 
-                     --><div class="lx-date-picker__day"
+                        <div class="lx-date-picker__day"
                              ng-class="{ 'lx-date-picker__day--is-selected': day.selected,
                                          'lx-date-picker__day--is-today': day.today }"
-                             ng-repeat="day in days">
-                            <a ng-click="select(day)">{{ day ? day.format('D') : '' }}</a>
-                        </div><!--
+                             ng-repeat="day in lxDatePicker.days">
+                            <a ng-click="lxDatePicker.select(day)">{{ day ? day.format('D') : '' }}</a>
+                        </div>
 
-                     --><span class="lx-date-picker__day lx-date-picker__day--is-empty"
-                              ng-repeat="x in emptyLastDays">&nbsp;</span>
+                        <span class="lx-date-picker__day lx-date-picker__day--is-empty"
+                              ng-repeat="x in lxDatePicker.emptyLastDays">&nbsp;</span>
                     </div>
                 </div>
 
                 <!-- Year selection -->
-                <div class="lx-date-picker__year-selector" ng-if="yearSelection">
+                <div class="lx-date-picker__year-selector" ng-if="lxDatePicker.yearSelection">
                     <a class="lx-date-picker__year"
-                         ng-class="{ 'lx-date-picker__year--is-active': year == activeDate.format('YYYY') }"
-                         ng-repeat="year in years"
-                         ng-click="selectYear(year)"
-                         ng-if="yearSelection">
-                        <span>{{ year }}</span>
+                         ng-class="{ 'lx-date-picker__year--is-active': year == lxDatePicker.moment(lxDatePicker.ngModel).format('YYYY') }"
+                         ng-repeat="year in lxDatePicker.years"
+                         ng-click="lxDatePicker.selectYear(year)"
+                         ng-if="lxDatePicker.yearSelection">
+                        {{ year }}
                     </a>
                 </div>
             </div>
 
             <!-- Actions -->
             <div class="lx-date-picker__actions">
-                <button class="btn btn--m btn--teal btn--flat" lx-ripple ng-click="closePicker()">Ok</button>
+                <lx-button lx-color="{{ lxDatePicker.color }}" lx-type="flat" ng-click="lxDatePicker.closePicker()">
+                    Ok
+                </lx-button>
             </div>
         </div>
     </div>
