--- a/modules/date-picker/demo/includes/example.html
+++ b/modules/date-picker/demo/includes/example.html
@@ -1,6 +1,6 @@
 <lx-date-picker ng-model="datepicker.date" lx-locale="fr" lx-input-label="Pick a date" lx-allow-clear="true"></lx-date-picker>
 
-<!-- <div class="mt+">
-    <lx-date-picker model="datepicker.date" label="Pick a date" locale="fr" fixed-label="true" icon="calendar"></lx-date-picker>
-    <lx-date-picker label="Pick a date" locale="fr" fixed-label="true" icon="cake-variant"></lx-date-picker>
-</div> -->
+<div class="mt+">
+    <lx-date-picker ng-model="datepicker.date" lx-locale="fr" lx-input-label="Pick a date" lx-input-fixed-label="true" lx-input-icon="calendar"></lx-date-picker>
+    <lx-date-picker ng-model="datepicker.emptyDate" lx-locale="fr" lx-input-label="Pick a date" lx-input-fixed-label="true" lx-input-icon="cake-variant"></lx-date-picker>
+</div>
