--- a/modules/date-picker/demo/includes/example.html
+++ b/modules/date-picker/demo/includes/example.html
@@ -1,4 +1,4 @@
-<lx-date-picker ng-model="datepicker.date" lx-locale="fr" lx-input-label="Pick a date" lx-allow-clear="true"></lx-date-picker>
+<lx-date-picker ng-model="datepicker.date" lx-min-date="datepicker.minDate" lx-max-date="datepicker.maxDate" lx-locale="fr" lx-input-label="Pick a date" lx-allow-clear="true"></lx-date-picker>
 
 <div class="mt+">
     <lx-date-picker ng-model="datepicker.date" lx-locale="fr" lx-input-label="Pick a date" lx-input-fixed-label="true" lx-input-icon="calendar"></lx-date-picker>
