--- a/modules/date-picker/views/date-picker.html
+++ b/modules/date-picker/views/date-picker.html
@@ -41,7 +41,7 @@
                             <i class="mdi mdi-chevron-left"></i>
                         </lx-button>
 
-                        <span>{{ lxDatePicker.moment(lxDatePicker.ngModel).format('MMMM YYYY') }}</span>
+                        <span>{{ lxDatePicker.ngModelMoment.format('MMMM YYYY') }}</span>
                         
                         <lx-button lx-size="l" lx-color="black" lx-type="icon" ng-click="lxDatePicker.nextMonth()">
                             <i class="mdi mdi-chevron-right"></i>
@@ -58,7 +58,8 @@
 
                         <div class="lx-date-picker__day"
                              ng-class="{ 'lx-date-picker__day--is-selected': day.selected,
-                                         'lx-date-picker__day--is-today': day.today }"
+                                         'lx-date-picker__day--is-today': day.today && !day.selected,
+                                         'lx-date-picker__day--is-disabled': day.disabled }"
                              ng-repeat="day in lxDatePicker.days">
                             <a ng-click="lxDatePicker.select(day)">{{ day ? day.format('D') : '' }}</a>
                         </div>
