--- a/modules/date-picker/views/date-picker.html
+++ b/modules/date-picker/views/date-picker.html
@@ -6,7 +6,7 @@
                        fixed-label="lxDatePicker.inputFixedLabel"
                        icon="{{ lxDatePicker.inputIcon }}"
                        ng-click="lxDatePicker.openPicker()">
-            <input type="text" ng-model="lxDatePicker.ngModelMomentFormatted" ng-disabled="true">
+            <input type="text" ng-model="lxDatePicker.ngModelMomentFormatted">
         </lx-text-field>
 
         <a class="lx-date__clear" ng-click="lxDatePicker.clearDate()" ng-if="lxDatePicker.allowClear">
