rework search filter: completely rework search filter
BREAKING:
All attributes must now be prefixed by lx.
Text input is wrapped into directive like text field.
Some attributes have changed, please refer to the updated documentation.

--- a/core/scss/tools/_mixins.scss
+++ b/core/scss/tools/_mixins.scss
@@ -51,3 +51,24 @@
     $icon-index: index($names, $icon);
     content: char(nth($hexes, $icon-index));
 }
+
+
+
+
+
+// Text field reset
+@mixin text-field-reset() {
+    display: block;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    box-shadow: none;
+    overflow: hidden;
+    cursor: text;
+    @include appearance(none);
+
+    &:focus {
+        outline: none;
+    }
+}
