--- a/modules/search-filter/views/search-filter.html
+++ b/modules/search-filter/views/search-filter.html
@@ -1,9 +1,20 @@
-<div class="search-filter search-filter--{{ theme }}-theme"
-     ng-class="{ 'search-filter--is-focused': model,
-                 'search-filter--is-closed': closed }">
-    <div class="search-filter__container">
-        <label class="search-filter__label"><i class="mdi mdi-magnify"></i></label>
-        <input type="text" class="search-filter__input" placeholder="{{ placeholder }}" ng-model="model">
-        <span class="search-filter__cancel" ng-click="clear()"><i class="mdi mdi-close-circle"></i></span>
+<div class="search-filter search-filter--{{ lxSearchFilter.color }}"
+     ng-class="{ 'search-filter--opened-mode': !lxSearchFilter.closed,
+                 'search-filter--closed-mode': lxSearchFilter.closed }">
+    <div class="search-filter__container"
+         ng-style="lxSearchFilter.getWidth()">
+        <div class="search-filter__button">
+            <lx-button lx-size="l" lx-color="{{ lxSearchFilter.color }}" lx-type="icon" ng-click="lxSearchFilter.openInput()">
+                <i class="mdi mdi-magnify"></i>
+            </lx-button>
+        </div>
+
+        <div class="search-filter__input" ng-transclude></div>
+
+        <span class="search-filter__clear"
+              ng-class="{ 'search-filter__clear--is-shown': lxSearchFilter.showClearButton }"
+              ng-click="lxSearchFilter.clearInput()">
+            <i class="mdi mdi-close-circle"></i>
+        </span>
     </div>
 </div>
