chore documentation: update select example

--- a/modules/select/demo/includes/example.html
+++ b/modules/select/demo/includes/example.html
@@ -1,6 +1,11 @@
 <div flex-container="row" flex-gutter="24">
     <div flex-item>
-        <lx-select ng-model="selects.selectedPerson" placeholder="Lorem Ipsum" choices="people" floating-label>
+        <lx-select ng-change="cbSelect.exec"
+                   ng-model="selects.selectedPerson"
+                   lx-choices="people"
+                   lx-display-filter="true"
+                   lx-floating-label="true"
+                   lx-placeholder="Lorem Ipsum">
             <lx-select-selected>
                 {{ $selected.name + ' ' + $selected.age }}
             </lx-select-selected>
@@ -12,10 +17,16 @@
     </div>
 
     <div flex-item>
-        <lx-select ng-model="ajax.selected" change="cbSelect.exec(newValue, oldValue)" placeholder="Lorem Ipsum"
-                   choices="ajax.list"  filter="ajax.update(newValue, oldValue)" loading="{{ ajax.loading }}"
-                   min-length="2" allow-clear="true" selection-to-model="ajax.toModel(data, callback)"
-                   model-to-selection="ajax.toSelection(data, callback)">
+        <lx-select ng-change="cbSelect.exec"
+                   ng-model="ajax.selected"
+                   lx-allow-clear="true"
+                   lx-choices="ajax.list"
+                   lx-display-filter="true"
+                   lx-filter="ajax.update"
+                   lx-loading="ajax.loading"
+                   lx-model-to-selection="ajax.toSelection"
+                   lx-placeholder="Lorem Ipsum"
+                   lx-selection-to-model="ajax.toModel">
             <lx-select-selected>
                 {{ $selected.Title }} ({{ $selected.Year }})
             </lx-select-selected>
@@ -31,7 +42,11 @@
 
 <div flex-container="row" flex-gutter="24">
     <div flex-item>
-        <lx-select ng-model="selects.selectedPersons" placeholder="Lorem Ipsum" choices="people" multiple floating-label>
+        <lx-select ng-model="selects.selectedPersons"
+                   lx-choices="people"
+                   lx-floating-label="true"
+                   lx-multiple="true"
+                   lx-placeholder="Lorem Ipsum">
             <lx-select-selected>
                 {{ $selected.name }} - {{ $selected.age }}
             </lx-select-selected>
@@ -43,7 +58,11 @@
     </div>
 
     <div flex-item>
-        <lx-select ng-model="selects.selectedPersons2" placeholder="Lorem Ipsum" choices="selectSections" multiple floating-label>
+        <lx-select ng-model="selects.selectedPersons2"
+                   lx-choices="selectSections"
+                   lx-floating-label="true"
+                   lx-multiple="true"
+                   lx-placeholder="Lorem Ipsum">
             <lx-select-selected>
                 {{ $selected.uid }} - {{ $selected.name }}
             </lx-select-selected>
